--- a/B8/main.css
+++ b/B8/main.css
@@ -32,7 +32,7 @@ body{
     height: 50px;
     border-radius: 50%;
     background: red;
-    animation: 1s linear 0s infinite anim;
+    animation: 1s ease-in-out infinite anim;
 }
 
 @keyframes anim {
